moved correct notice to avoid keyboard covering it up on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -281,6 +281,10 @@
   border-bottom: 2px solid #212429;
 }
 
+#correct {
+    color: green;
+}
+
 /* 6.1 Timer Styling */
 
 .display-timer {
